--- a/src/ui/sections/home/home.scss
+++ b/src/ui/sections/home/home.scss
@@ -171,3 +171,90 @@ $mapaColores: (
     }
   }
 }
+
+
+
+
+@media screen and (min-width: 1024px){
+  .home{
+
+    .home__Presentation{
+  
+      .home__Greeting{
+        font-size: 2rem;;
+      }
+
+      .home__Name{
+        font-size: 2.5rem;
+      }
+  
+      .home__Profession{
+        font-size: 3rem;
+      }
+
+      .home__CV{
+        font-size: 1.2rem;
+      }
+  
+    }
+
+    .home__Social{
+      
+      .home__SocialIcon{
+        margin-right: 2.5rem;
+        font-size: 3rem;
+      }
+
+    }
+
+    .home__ImgBox{
+      .home__Img{
+        width: 500px;
+      }
+    }
+  }
+}
+
+
+
+
+
+@media screen and (min-width: 1200px){
+  .home{
+
+    .home__Presentation{
+  
+      .home__Greeting{
+        font-size: 2.5rem;;
+      }
+
+      .home__Name{
+        font-size: 3rem;
+      }
+  
+      .home__Profession{
+        font-size: 3.6rem;
+      }
+
+      .home__CV{
+        font-size: 1.5rem;
+      }
+  
+    }
+
+    .home__Social{
+      
+      .home__SocialIcon{
+        margin-right: 3rem;
+        font-size: 4rem;
+      }
+
+    }
+
+    .home__ImgBox{
+      .home__Img{
+        width: 600px;
+      }
+    }
+  }
+}
