--- a/src/ui/widget/navegation/navegation.scss
+++ b/src/ui/widget/navegation/navegation.scss
@@ -78,11 +78,12 @@ $mapaColores: (
 
       .navegation__ListSection{
         margin-bottom: 0;
-        margin-left: 0.6rem;
+        margin-left: 1rem;
 
         .navegation__ListLink{
           color: $PrimaryLighten;
           font-weight: 800;
+          font-size: 1.1rem;
         }
 
         .navegation__ListLink:hover{
@@ -97,13 +98,17 @@ $mapaColores: (
 
 
 
-@media screen and (min-width: 990px){
+@media screen and (min-width: 1020px){
 
   .navegation{
     .navegation__List{
       .navegation__ListSection{
-        margin-left: 1rem;
+        margin-left: 1.5rem;
+        .navegation__ListLink{
+          font-size: 1.2rem;
+        }
       }
+      
     }
   }
 }
@@ -117,8 +122,9 @@ $mapaColores: (
   .navegation{
     .navegation__List{
       .navegation__ListSection{
-        margin-left: 2rem;
+        margin-left: 1.8rem;
       }
+      
     }
   }
 }
